--- a/style.css
+++ b/style.css
@@ -121,6 +121,7 @@ p{
     vertical-align: top;
     margin-bottom: 50px;
     transition: all .7s;
+    position: relative;
 }
 .collumn + .collumn { 
   border-left: 1px solid #2f2f2f;
@@ -303,7 +304,7 @@ p{
 }
 .logo1{
     font-family: 'Shrikhand', serif;
-    font-size: 30px;
+    font-size: 20px;
 }
 .logo2{
     font-family: 'Baloo 2', sans-serif;
@@ -405,4 +406,71 @@ a{
     flex-direction: column;
     text-align: center;
 }
+}.muzieknootjes {
+    display: none;
+    margin: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+    min-width: 200px;
+    height: 100px;
+    border: 0px solid #000;
+  }
+  
+  .noot-1,
+  .noot-2,
+  .noot-3,
+  .noot-4{
+    position: absolute;
+    animation: notes 2s infinite linear;
+    font-size: 35px;
+    opacity: 0;
+  }
+  
+  .noot-1 {
+    top:-10px;
+    left: 0;
+    animation-delay: 0.5s;
+  }
+  
+  .noot-2 {
+    top: 30px;
+    left: -30%;
+    animation-delay: 1s;
+  }
+  
+  .noot-3 {
+    top: 90px;
+    right: -40%;
+    animation-delay: 1.5s;
+  }
+  
+  .noot-4 {
+    top: 150px;
+    left: 50%;
+    animation-delay: 2s;
+  }
+  
+  @keyframes notes {
+    0% {
+      transform: scale(1) translate(0, 0);
+      opacity: 0;
+    }
+    50% {
+      opacity: 1;
+      transform: scale(1.5) translate(50%, -50%);
+    }
+    80% {
+      opacity: 0;
+      transform: scale(1.5) translate(100%, -100%);
+    }
+    100% {
+      transform: scale(1.5) translate(100%, -100%);
+      opacity: 0;
+    }
+  }
+  
+.collumn:hover .muzieknootjes {
+    display: block;
 }
